# jump-game-cplusplus

./: CMakeLists.txt  Jump.cbp  README.md
source/: Main.cpp
source/game/: Game.cpp  Game.hpp  GameState.cpp  GameState.hpp  GameStateManager.cpp  GameStateManager.hpp
source/game/states/: LevelState.cpp  LevelState.hpp  StartupState.cpp  StartupState.hpp
source/input/: InputButton.hpp  InputListener.hpp  InputManager.cpp  InputManager.hpp
source/input/sdl2/: Sdl2InputManager.cpp  Sdl2InputManager.hpp
source/level/: Block.cpp  Block.hpp  Entity.cpp  Entity.hpp  Layer.cpp  Layer.hpp  Level.cpp  Level.hpp
source/level/entities/: Player.cpp  Player.hpp
source/test/: TestLevels.cpp  TestLevels.hpp
source/util/: Util.hpp
source/video/: VideoManager.hpp
source/video/sdl2/: Sdl2VideoManager.cpp  Sdl2VideoManager.hpp
